# adeptum

./: .gitignore  README.md  README.rst  docker-compose.yml  manage.py  pyproject.toml
adeptum/: __init__.py  app.py  blueprints.py  config.py  decorators.py  enums.py  extensions.py  models.py  schemas.py  welcome.py
adeptum/guide/: sources.py
adeptum/user/: sources.py
migrations/versions/: 9cf5af170308_initial_migration.py
tests/: test_adeptum.py
